# arba-seri

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  cmake_quick_install.cmake  conanfile.py  seri-config.cmake.in
cmake/config/: package-config.cmake.in
cmake/scripts/: quick_install.cmake
example/: CMakeLists.txt  polymorphic_example.cpp  seri_example.cpp  string_example.cpp
example/basic_cmake_project/: CMakeLists.txt  main.cpp
include/arba/seri/: polymorphism.hpp  serializable_object.hpp
include/arba/seri/binary/: binary_serializable.hpp  read_binary.hpp  write_binary.hpp
include/seri/: polymorphism.hpp  serializable_object.hpp
include/seri/archive/: archive_base.hpp  binary_archive.hpp
include/seri/binary/: binary_io.hpp  read_binary.hpp  write_binary.hpp
src/: seri.cpp
src/arba/seri/binary/: read_binary.cpp  write_binary.cpp
src/binary/: read_binary.cpp  write_binary.cpp
test/: CMakeLists.txt  binary_io_tests.cpp  binary_polymorphic_tests.cpp  binary_range_tests.cpp  binary_real_tests.cpp  binary_signed_integral_tests.cpp  binary_string_tests.cpp  binary_unsigned_integral_tests.cpp  binary_uuid_tests.cpp  classes.hpp  polymorphic_classes.hpp  polymorphism_tests.cpp  project_version_tests.cpp
test_package/: CMakeLists.txt  test_package.cpp
